--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <video class="background-video" autoplay muted loop>
+    <video class="background-video" autoplay muted loop playsinline>
         <source src="/images/bg3.mp4" type="video/mp4">
         Your browser does not support the video tag.
     </video>
