Favicon added - about.html

--- a/about.html
+++ b/about.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 
     <link href="https://fonts.cdnfonts.com/css/ledlight" rel="stylesheet">
+    <link rel="icon" type="image/png" href="/images/MADEX_favicon.png">
 
 </head>
 <body>
